# wagtail-portablepages

./: pyproject.toml  setup.cfg  tox.ini
portablepages/: apps.py  forms.py  utils.py  views.py  wagtail_hooks.py
portablepages/tests/: settings.py  test_utils.py  urls.py
