[metadata]
name = wagtail-portablepages
version = 1.0.0
author = CFPB
author_email = tech@cfpb.gov
description = An add-on for Wagtail to enable downloading and uploading pages.
long_description = file: README.md
long_description_content_type = text/markdown
license = CC0
url = https://github.com/cfpb/wagtail-portablepages
classifiers =
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Wagtail
    Framework :: Wagtail :: 2
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    License :: Public Domain
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    wagtail >= 2.11,<3

[options.extras_require]
testing =
    coverage

[flake8]
ignore=E731,W503,W504
exclude=
    .git,
    .tox,
    __pycache__,
    .eggs/*,

[isort]
profile = black
skip=.tox,migrations
known_django=django
known_wagtail=wagtail
default_section=THIRDPARTY
sections=FUTURE,STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
